corrected card block spacing on instructor pages

--- a/resources/assets/sass/partials/_general.scss
+++ b/resources/assets/sass/partials/_general.scss
@@ -327,3 +327,12 @@ h6 sup {
         top       : 70px;
     }
 }
+
+/*
+//
+// INSTRUCTOR PAGES STYLES
+// --------------------------------------------------
+*/
+.html-content .card-block {
+    margin-top: 1em;
+}
